--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "^3.4.1",
     "babel-preset-react": "^6.24.1",
     "prop-types": "^15.6.1",
+    "rails-erb-loader": "^5.4.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
